# hdcms-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  array.c  array.h  main.c  main.h  setup.ps1  test.c  test.h
data/: CM1_10_1.txt  CM1_10_10.txt  CM1_10_2.txt  CM1_10_3.txt  CM1_10_4.txt  CM1_10_5.txt  CM1_10_7.txt  CM1_10_8.txt  CM1_11_1.txt  CM1_11_10.txt  CM1_11_3.txt  CM1_11_5.txt  CM1_11_8.txt  CM1_12_1.txt  CM1_12_2.txt  CM1_12_3.txt  CM1_12_8.txt  CM1_13_2.txt  CM1_13_4.txt  CM1_13_6.txt  CM1_14_4.txt  CM1_14_6.txt  CM1_14_7.txt  CM1_14_8.txt  CM1_14_9.txt  CM1_15_1.txt  CM1_15_10.txt  CM1_15_4.txt  CM1_15_7.txt  CM1_15_9.txt  CM1_16_6.txt  CM1_16_9.txt  CM1_17_1.txt  CM1_17_2.txt  CM1_17_3.txt  CM1_17_8.txt  CM1_18_10.txt  CM1_18_3.txt  CM1_18_4.txt  CM1_18_5.txt  (+222 more)
examples/: README.md  clean.py  compound1_high_res.txt  compound1_low_res.txt  compound2_low_res.txt  compound3_low_res.txt  main.sh  simple.py  visualize.py
examples/python-hdcms-package/: README.md  python.c  setup.py
src/: array.c  array.h  fixwindows.h  main.c  main.h  peak.c  peak.h  test.c
src/main/: main.c  main.h
src/test/: data.c  test.c  test.h  vec_read_simple.txt
src/test/data/: CM1_10_6.txt  CM1_10_9.txt  CM1_11_2.txt  CM1_11_4.txt  CM1_11_6.txt  CM1_11_7.txt  CM1_11_9.txt  CM1_12_10.txt  CM1_12_4.txt  CM1_12_5.txt  CM1_12_6.txt  CM1_12_7.txt  CM1_12_9.txt  CM1_13_1.txt  CM1_13_10.txt  CM1_13_3.txt  CM1_13_5.txt  CM1_13_7.txt  CM1_13_8.txt  CM1_13_9.txt  CM1_14_1.txt  CM1_14_10.txt  CM1_14_2.txt  CM1_14_3.txt  CM1_14_5.txt  CM1_15_2.txt  CM1_15_3.txt  CM1_15_5.txt  CM1_15_6.txt  CM1_15_8.txt  CM1_16_1.txt  CM1_16_10.txt  CM1_16_2.txt  CM1_16_3.txt  CM1_16_4.txt  CM1_16_5.txt  CM1_16_7.txt  CM1_16_8.txt  CM1_17_10.txt  CM1_17_4.txt  (+236 more)
src/util/: array.c  array.h  bin.c  bin.h  oned.c  oned.h  peak.c  peak.h
test/: data.c  run_test  test.c  test.h
